@@ -242,6 +242,7 @@ printUsage(std::ostream &out, const char* whoAmI, bool full)
 			<< "                      asp:<script> - use asp program <script> as eval heuristic" << std::endl
 			<< "     --dumpevalplan=F dump evaluation plan (usable as manual heuristics) to file F" << std::endl
       << " --forcegc            Always use the guess and check model generator" << std::endl
+      << " --incremental        Ground the program incrementally in order to deal with value invention" << std::endl
       << " -m, --modelbuilder=M Use M as model builder, where M is one of (online,offline)" << std::endl
       << "     --nocache        Do not cache queries to and answers from external atoms." << std::endl
       << " -v, --verbose[=N]    Specify verbose category (default: 1):" << std::endl
@@ -469,6 +470,7 @@ int main(int argc, char *argv[])
 	pctx.config.setOption("LazyUFSCheckerInitialization", 0);
 	pctx.config.setOption("SupportSets", 0);
 	pctx.config.setOption("ForceGC", 0);
+	pctx.config.setOption("IncrementalGrounding", 0);
 
 	WARNING("TODO cleanup the setASPSoftware vs nGenuineSolver thing")
 	// but if we have genuinegc, take genuinegc as default
@@ -792,6 +794,7 @@ void processOptionsPrePlugin(
 		{ "lazyufscheckerinitialization", no_argument, 0, 47 },
 		{ "supportsets", no_argument, 0, 48 },
 		{ "forcegc", no_argument, 0, 49 },
+		{ "incremental", no_argument, 0, 50 },
 		{ NULL, 0, NULL, 0 }
 	};
 
@@ -1467,6 +1470,9 @@ void processOptionsPrePlugin(
 		case 49:
 			pctx.config.setOption("ForceGC", 1);
 			pctx.config.setOption("LiberalSafety", 1);
+			break;
+		case 50:
+			pctx.config.setOption("IncrementalGrounding", 1);
 			break;
 		}
 	}
